Fix layout issues with rp-spinner in Firefox.
Refactor spinner directive to use simpler markup. Update all instances where the
directive is currently used.

--- a/src/less/ripple/content.less
+++ b/src/less/ripple/content.less
@@ -82,16 +82,13 @@ nav + .content {
       font-weight: normal;
     }
 
-    .spinner {
-      padding-right: 25px;
-
-      & > span {
-        padding-left: 25px;
-      }
+    &.spinner {
+      position: relative;
+      padding-left: 25px;
 
       .spinnerInner {
-        left: -8px;
-        top: -20px;
+        left: -15px !important;
+        top: 11px !important;
       }
     }
   }
