--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -383,16 +383,6 @@
       }
     }
 
-    .spinner {
-      float: right;
-      margin: 35px 20px 0 0;
-
-      .spinnerInner {
-        left: 0 !important;
-        top: 0 !important;
-      }
-    }
-
     .pagination ul {
       float: right;
       padding: 0;
